# texplain

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md  environment.yaml  environment.yml  pyproject.toml  setup.py  texplain
.github/workflows/: ci.yml  pythonpublish.yml
docs/: conf.py  indent.rst  index.rst  install.rst  module.rst  pre-commit.rst  tools.rst  usage.rst
test/: test1.py
test/input1/: example.tex
test/orig/: refs.bib
test/output1/: example.tex  library.bib
test/plain/: example.tex
tests/: main.py  test1.py  test_align.py  test_bibtex.py  test_classify.py  test_cli_texcleanup.py  test_find_command.py  test_find_commands.py  test_formatter_math.py  test_indent.py  test_indent_long.py  test_indent_options.py  test_indent_simple.py  test_indent_texindent.py  test_one_sentence_per_line.py  test_placeholders.py  test_sentence.py  test_simple.py  test_texplain_example1.py
tests/input1/: example.tex  goose-article.cls  refs.bib
tests/output1/: main.tex
texplain/: __init__.py
